2023-04-01  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.6-0

2023-03-03  Enrico Schumann  <es@enricoschumann.net>

        * data/tznames.txt: update timezone names

2023-01-09  Enrico Schumann  <es@enricoschumann.net>

        * Scripts/tznames.R: remove duplicates

2022-07-01  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (guess_datetime): improve pattern
        for YYYYMMDD

2022-05-27  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (prev_bday, previous_businessday):
        argument 'holidays' is now supported
        (next_bday, next_businessday):
        argument 'holidays' is now supported
        (is_businessday):
        argument 'holidays' is now supported

2021-07-25  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (date1904): add function

2021-07-24  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (convert_date): add type
        "excel1904", for Excel files with origin 1904-01-01

2021-05-27  Enrico Schumann  <es@enricoschumann.net>

        * NAMESPACE: export 'hour', 'minute' and 'second'

2021-05-04  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (guess_datetime): patterns in
        some cases required that a day be a two-digit
        number; now a single digit suffices. Example:

        ## old
        guess_datetime("3.5.2021", date.only = TRUE)
        ## [1] NA

        ## new
        guess_datetime("3.5.2021", date.only = TRUE)
        ## "2021-05-03"

2021-04-01  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.5-0

2021-03-17  Enrico Schumann  <es@enricoschumann.net>

        * man/guess_datetime.Rd: remove reference
        to 'anytime' to avoid check-note

2021-02-24  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (guess_datetime): new argument
        'try.patterns'

        * data/tznames.txt: update timezone names;
        remove duplicates
