@@ -1,3 +1,5 @@
 if (requireNamespace("tinytest", quietly = TRUE)) {
-    tinytest.results <- tinytest::test_package("datetimeutils")
+    tinytest.results <- tinytest::test_package("datetimeutils",
+                                               color = interactive(),
+                                               verbose = 1)
 }
