@@ -1,3 +1,9 @@
+2023-04-03  Enrico Schumann  <es@enricoschumann.net>
+
+        * inst/tinytest/test.R (tfun): compare results from
+        datetime conversion via text-representation (i.e.
+        YYYYMMDD ...)
+
 2023-04-01  Enrico Schumann  <es@enricoschumann.net>
 
         * DESCRIPTION (Version): 0.6-0
